--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="./css/search.css">
     <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="css/ios-fixes.css">
+    <link rel="stylesheet" href="./css/long-text-fix.css">
 
     <!-- Markdown解析库 -->
     <script src="https://cdn.jsdelivr.net/npm/marked@9.1.6/marked.min.js"></script>
@@ -113,6 +114,8 @@
     <script src="./js/fileUpload.js"></script>
     <script src="./js/realtime.js"></script>
     <script src="./js/messageHandler.js"></script>
+    <script src="./js/longTextFix.js"></script>
+    <script src="./js/mobileTextFix.js"></script>
     <script src="./js/pwa.js"></script>
     <!-- 功能组件 -->
     <script src="./js/components/functionButton.js"></script>
